--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bobber",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "bobber ======",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "hoek": "2.x.x"
   },
   "devDependencies": {
-    "lab": "4.x.x"
+    "code": "1.x.x",
+    "lab": "5.x.x"
   }
 }
