--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "url": "https://github.com/fishin/bobber/issues"
   },
   "homepage": "https://github.com/fishin/bobber",
+  "dependencies": {
+    "smelt": "git+https://github.com/fishin/smelt"
+  },
   "devDependencies": {
     "code": "1.x.x",
     "lab": "5.x.x"
