--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "code": "1.x.x",
-    "lab": "5.x.x"
+    "lab": "5.x.x",
+    "pail": "git+https://github.com/fishin/pail"
   }
 }
