--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "code": "1.x.x",
     "hapi": "8.x.x",
     "lab": "5.x.x",
+    "mock": "git+https://github.com/fishin/mock",
     "pail": "git+https://github.com/fishin/pail"
   }
 }
