--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bobber",
   "version": "0.0.4",
   "description": "git related functions for ficion",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/fishin/bobber"
