--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - iojs
+  - iojs-v2.4.0
 before_script:
   - git config --global user.email "lloyd.benson@gmail.com"
   - git config --global user.name "Travis-CI"
