--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bobber",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "git related functions for ficion",
   "main": "lib/index.js",
   "repository": {
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/fishin/bobber",
   "engines": {
-    "node": ">=0.10.x"
+    "node": ">=4"
   },
   "scripts": {
     "clean": "rm -rf node_modules",
