--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
-
-node_js:
-  - 4
 before_script:
   - git config --global user.email "lloyd.benson@gmail.com"
   - git config --global user.name "Travis-CI"
+env:
+  - CXX="g++-4.8"
+node_js:
+  - 4
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+    - gcc-4.8
